--- a/soil-fertilizer/how-organic-matter-improves-soil.html
+++ b/soil-fertilizer/how-organic-matter-improves-soil.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>How Organic Matter Improves Soil</title>
-  <meta name="description" content="Organic matter improves soil by rebuilding structure, stabilizing moisture, and restoring root-friendly conditions. It works by changing soil behavior, not by feeding grass directly.">
+  <meta name="description" content="Organic matter improves soil by preventing structural collapse, moisture failure, and root shutdown. Without it, soil steadily loses the ability to support grass at all.">
   <link rel="canonical" href="https://grizzlygreens.net/soil-fertilizer/how-organic-matter-improves-soil.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="How Organic Matter Improves Soil">
-  <meta name="twitter:description" content="Organic matter improves soil by rebuilding structure, stabilizing moisture, and restoring root-friendly conditions. It works by changing soil behavior, not by feeding grass directly.">
+  <meta name="twitter:description" content="Organic matter improves soil by preventing structural collapse, moisture failure, and root shutdown. Without it, soil steadily loses the ability to support grass at all.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="How Organic Matter Improves Soil">
-  <meta property="og:description" content="Organic matter improves soil by rebuilding structure, stabilizing moisture, and restoring root-friendly conditions. It works by changing soil behavior, not by feeding grass directly.">
+  <meta property="og:description" content="Organic matter improves soil by preventing structural collapse, moisture failure, and root shutdown. Without it, soil steadily loses the ability to support grass at all.">
   <meta property="og:url" content="https://grizzlygreens.net/soil-fertilizer/how-organic-matter-improves-soil.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,45 +56,45 @@
   <main class="container">
     <h1>How Organic Matter Improves Soil</h1>
 
-<h2>Organic matter improves soil by changing how it behaves</h2>
-<p>Organic matter is often treated like a nutrient boost, but its real value is structural. It changes how soil holds together, how water moves, and how roots live inside it.</p>
-<p>When soil improves from organic matter, it is because the soil becomes easier for roots to use, not because grass was “fed” directly.</p>
+<h2>Soil without organic matter slowly loses function</h2>
+<p>Soil does not fail all at once. It degrades gradually as structure weakens, moisture behavior becomes extreme, and roots lose reliable space.</p>
+<p>Organic matter matters because it slows and reverses that decline. Without it, soil trends toward collapse instead of recovery.</p>
 
-<h2>It rebuilds soil structure instead of forcing growth</h2>
-<p>Healthy soil has a loose, crumbly structure that allows air and water to move. Damaged soil becomes tight, sealed, or unstable.</p>
-<p>Organic matter helps rebuild that structure by creating space and stability that soil can hold onto over time.</p>
+<h2>Structure breaks down before grass shows stress</h2>
+<p>Healthy soil depends on small internal spaces that allow movement and flexibility. As organic matter disappears, those spaces collapse.</p>
+<p>Once structure tightens, soil stops responding to normal care even though grass may still look acceptable on the surface.</p>
 
-<h2>It stabilizes water instead of swinging between wet and dry</h2>
-<p>Soil with little organic matter tends to behave in extremes. It either drains too fast or stays wet too long.</p>
-<p>Organic matter improves water behavior by holding moisture when soil dries and helping water move when soil is saturated.</p>
+<h2>Water behavior becomes unstable</h2>
+<p>As structure weakens, soil stops regulating moisture. It swings between drying too fast and staying wet too long.</p>
+<p>This instability forces roots into constant adjustment and keeps grass one stress event away from decline.</p>
 
-<h2>It creates room for oxygen to return</h2>
-<p>Roots do not just need water. They need air.</p>
-<p>Organic matter increases the small spaces in soil that allow oxygen to reach roots, which is why lawns often begin recovering from stress only after soil becomes more breathable.</p>
+<h2>Oxygen loss shuts roots down</h2>
+<p>When soil structure collapses, air exchange slows. Roots begin operating in survival mode instead of growth mode.</p>
+<p>At this stage, grass stops recovering between stresses, even when watering and fertilizing are technically correct.</p>
 
-<h2>It supports deeper, more stable roots</h2>
-<p>When soil holds moisture longer and stays more open, roots can grow deeper instead of staying trapped near the surface.</p>
-<p>That deeper rooting is what turns short-term improvement into real resilience.</p>
+<h2>Compaction becomes permanent instead of temporary</h2>
+<p>Without organic matter, soil compressed by traffic or weather does not rebound.</p>
+<p>This is when warning signs described in <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">Signs of Compacted Lawn Soil</a> stop being occasional and start defining how the lawn behaves.</p>
 
-<h2>It reduces compaction pressure over time</h2>
-<p>Organic matter does not make soil immune to compaction, but it helps soil resist becoming a solid mass.</p>
-<p>This is why compacted lawns often improve once organic material is added consistently, especially when the warning patterns in <a href="/soil-fertilizer/signs-of-compacted-lawn-soil.html">Signs of Compacted Lawn Soil</a> have already started showing up.</p>
+<h2>Roots lose depth and stability</h2>
+<p>As soil becomes denser and less breathable, roots retreat toward the surface.</p>
+<p>Shallow rooting reduces drought tolerance, increases heat stress, and makes recovery slower after every setback.</p>
 
-<h2>It works because it does multiple jobs at once</h2>
-<p>Organic matter improves drainage, moisture holding, and root function at the same time.</p>
-<p>That combination is why it often succeeds where single-purpose products fail, and it is also why understanding <a href="/soil-fertilizer/what-organic-matter-actually-does.html">What Organic Matter Actually Does</a> matters before expecting a quick result.</p>
+<h2>Organic matter interrupts the failure cycle</h2>
+<p>Organic matter rebuilds internal space, allowing soil to hold together without sealing shut.</p>
+<p>This is not a nutrient effect. It is a physical reset, which is why understanding <a href="/soil-fertilizer/what-organic-matter-actually-does.html">What Organic Matter Actually Does</a> prevents expecting short-term cosmetic results.</p>
 
-<h2>It only helps when it matches the problem</h2>
-<p>Organic matter is powerful, but it is not always the right tool for every soil issue.</p>
-<p>Knowing when it is worth applying depends on what the soil is missing, which is why the decision point described in <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">When Soil Amendments Make Sense</a> prevents wasted effort.</p>
+<h2>Improvement compounds once structure returns</h2>
+<p>Early changes from organic matter are subtle. Over time, soil begins holding moisture longer, draining more evenly, and supporting deeper roots.</p>
+<p>Each gain makes the next one easier, shifting the lawn from fragile to resilient.</p>
 
-<h2>Organic matter improves soil slowly, but the gains stack</h2>
-<p>Soil does not rebuild overnight. Early improvements are subtle, then acceleration happens as structure becomes more stable.</p>
-<p>Once soil starts holding moisture, air, and roots more consistently, every other lawn input begins working better.</p>
+<h2>Organic matter is powerful but not universal</h2>
+<p>Some soil problems require different corrections before organic matter can help.</p>
+<p>Knowing when it is the right tool depends on soil condition, which is why the decision point outlined in <a href="/soil-fertilizer/when-soil-amendments-make-sense.html">When Soil Amendments Make Sense</a> matters more than enthusiasm.</p>
 
-<h2>Better soil is the real outcome</h2>
-<p>Grass responds to organic matter because the soil becomes more livable.</p>
-<p>When organic matter is used correctly, the goal is not a short-term green-up. The goal is a soil system that can support grass without constant intervention.</p>
+<h2>Organic matter protects soil’s future</h2>
+<p>The biggest benefit is not immediate improvement. It is preventing further degradation.</p>
+<p>By maintaining structure, moisture balance, and root space, organic matter keeps soil capable of supporting grass long term instead of slowly failing beneath it.</p>
   </main>
 
   <footer class="site-footer">
