--- a/tools-safety/lawn-tools-homeowners-actually-need.html
+++ b/tools-safety/lawn-tools-homeowners-actually-need.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Lawn Tools Homeowners Actually Need</title>
-  <meta name="description" content="Most lawn problems aren’t caused by missing tools, but by using the wrong ones. Homeowners need fewer tools than they think, used at the right time.">
+  <meta name="description" content="Most lawn problems come from excessive or poorly timed equipment use. Homeowners need fewer implements than expected, applied with restraint.">
   <link rel="canonical" href="https://grizzlygreens.net/tools-safety/lawn-tools-homeowners-actually-need.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,7 +14,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lawn Tools Homeowners Actually Need">
-  <meta name="twitter:description" content="Most lawn problems aren’t caused by missing tools, but by using the wrong ones. Homeowners need fewer tools than they think, used at the right time.">
+  <meta name="twitter:description" content="Most lawn problems come from excessive or poorly timed equipment use. Homeowners need fewer implements than expected, applied with restraint.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
   <meta name="twitter:image:alt" content="Default preview image for GrizzlyGreens.net">
 
@@ -22,7 +22,7 @@
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Lawn Tools Homeowners Actually Need">
-  <meta property="og:description" content="Most lawn problems aren’t caused by missing tools, but by using the wrong ones. Homeowners need fewer tools than they think, used at the right time.">
+  <meta property="og:description" content="Most lawn problems come from excessive or poorly timed equipment use. Homeowners need fewer implements than expected, applied with restraint.">
   <meta property="og:url" content="https://grizzlygreens.net/tools-safety/lawn-tools-homeowners-actually-need.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
   <meta property="og:image:width" content="1200">
@@ -56,37 +56,37 @@
 <main class="container">
   <h1>Lawn Tools Homeowners Actually Need</h1>
 
-  <h2>Most lawn damage comes from over-tooling</h2>
-  <p>Every tool applies pressure, cuts material, or disturbs soil. When tools are used too often or for the wrong reason, damage accumulates faster than recovery.</p>
-  <p>You notice lawns declining even though more effort and equipment are being used.</p>
+  <h2>Damage usually comes from excess force, not neglect</h2>
+  <p>Every pass of equipment applies weight, vibration, and shear to grass and soil. When those forces are applied repeatedly, recovery time disappears and stress accumulates.</p>
+  <p>The result shows up as compacted ground, thinning turf, and bare areas that expand despite frequent attention.</p>
 
-  <h2>A mower is a management tool, not a fixer</h2>
-  <p>Mowing controls leaf height and stress balance. It does not repair thin grass, poor soil, or weak roots.</p>
-  <p>You notice repeated problems tied to cutting habits, especially when <a href="/tools-safety/why-mower-height-is-often-wrong.html">mower height is often wrong</a>.</p>
+  <h2>Mowing manages stress, it doesn’t correct weakness</h2>
+  <p>Cutting removes leaf area, which immediately reduces photosynthesis. When done too low or too often, roots shrink to match the reduced energy supply.</p>
+  <p>This leads to shallow rooting and poor drought tolerance, the same chain reaction behind why <a href="/tools-safety/why-mower-height-is-often-wrong.html">mower height is often wrong</a>.</p>
 
-  <h2>Hand tools matter more than machines</h2>
-  <p>Simple tools like a rake, shovel, or soil probe allow observation and small corrections without widespread disturbance.</p>
-  <p>You notice better results when changes are targeted instead of mechanical.</p>
+  <h2>Small hand implements limit collateral damage</h2>
+  <p>Rakes, shovels, and probes concentrate disturbance to specific spots instead of spreading it across the yard.</p>
+  <p>This keeps surrounding soil intact, preventing widespread compaction or surface sealing.</p>
 
-  <h2>Timing matters more than tool type</h2>
-  <p>The same tool causes help or harm depending on soil moisture, temperature, and stress level.</p>
-  <p>You notice setbacks happening when work continues during periods described in <a href="/tools-safety/when-yard-work-should-be-stopped.html">when yard work should be stopped</a>.</p>
+  <h2>Conditions decide whether work causes harm</h2>
+  <p>Wet soil deforms under pressure, dry soil fractures, and stressed grass lacks the energy to recover from cuts.</p>
+  <p>When work continues during these states, outcomes line up with the failures described in <a href="/tools-safety/when-yard-work-should-be-stopped.html">when yard work should be stopped</a>.</p>
 
-  <h2>More tools shorten tool life and lawn life</h2>
-  <p>Frequent use accelerates wear on equipment and soil alike. Overuse dulls blades and compresses ground.</p>
-  <p>You notice outcomes that match the same patterns explained in <a href="/tools-safety/mistakes-that-shorten-tool-life.html">mistakes that shorten tool life</a>.</p>
+  <h2>Frequent use accelerates wear on both sides</h2>
+  <p>Dull blades tear rather than cut, increasing water loss from grass tips. Repeated passes pack soil particles tighter together.</p>
+  <p>Uneven cuts, ragged edges, and hard ground mirror the same patterns outlined in <a href="/tools-safety/mistakes-that-shorten-tool-life.html">mistakes that shorten tool life</a>.</p>
 
-  <h2>Homeowners don’t need professional equipment</h2>
-  <p>Heavy-duty machines apply more force than most residential lawns can absorb.</p>
-  <p>You notice damage following aggressive tools meant for volume, not precision.</p>
+  <h2>Commercial machines overwhelm residential lawns</h2>
+  <p>Equipment designed for speed and acreage applies more downward force than a home lawn can absorb.</p>
+  <p>Ruts, scalping, and persistent compaction often trace back to weight and power exceeding the soil’s tolerance.</p>
 
-  <h2>Observation replaces half the tools people buy</h2>
-  <p>Knowing when not to act prevents more problems than adding equipment ever fixes.</p>
-  <p>You notice improvement when the lawn is allowed to recover instead of being worked constantly.</p>
+  <h2>Observation replaces most equipment purchases</h2>
+  <p>Recognizing when grass is actively growing versus stressed prevents unnecessary intervention.</p>
+  <p>Allowing recovery periods often restores density faster than any mechanical action.</p>
 
-  <h2>The right tools reduce intervention</h2>
-  <p>A mower set correctly, basic hand tools, and restraint solve most homeowner needs.</p>
-  <p>Lawns succeed not from more tools, but from fewer disruptions.</p>
+  <h2>Minimal equipment supports long-term stability</h2>
+  <p>A properly set mower and a few basic hand implements address most homeowner needs without overwhelming the lawn.</p>
+  <p>Durable turf develops when disturbance is controlled rather than multiplied.</p>
 </main>
 
 <footer class="site-footer">
